--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
