--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "node ./bin/www.ts",
     "dev": "nodemon",
-    "build": "tsc"
+    "build": "tsc && node ./bin/www.ts",
+    "build:prod": "tsc && node ./bin/www.ts",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
@@ -24,6 +27,8 @@
     "playwright": "^1.46.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
@@ -31,6 +36,9 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
