--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "scripts": {
       "backend": "npm run dev -w backend",
       "frontend": "npm run dev -w frontend",
+      "build:backend": "npm run build -w backend",
+      "build:frontend": "npm run build -w frontend",      
+      "build:both": "concurrently \"npm run build:backend\" \"npm run build:frontend\"",
       "start": "concurrently \"npm run backend\" \"npm run frontend\"",
       "test:backend": "npm test -w backend",
       "test:frontend": "npm test -w frontend"
