--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,4 +1,4 @@
-{
+{ 
     "compilerOptions": {
       "target": "ES6",                          
       "module": "commonjs",                     
@@ -7,14 +7,13 @@
       "skipLibCheck": true,                     
       "forceConsistentCasingInFileNames": true, 
       "outDir": "./dist",                       
-      "rootDir": "./",     
-      "moduleResolution": "node",                  
+      "rootDir": "./src",     
+      "moduleResolution": "node",
       "resolveJsonModule": true,                
-      "typeRoots": ["./node_modules/@types"],   
+      "typeRoots": ["./node_modules/@types", "types/global.d.ts"],   
       "lib": ["ES6"],                           
-      "sourceMap": true                         
+      "sourceMap": true
     },
-    "include": ["**/*.ts"],
-    "exclude": ["node_modules", "dist"]        
-  } 
-  
+    "include": ["**/*.ts", "types/global.d.ts"],
+    "exclude": ["node_modules", "dist"],
+} 
