--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,9 +34,9 @@ jobs:
     - name: Build the backend
       run: |
         cd backend
-        npm run build
+        npm run build:prod
 
     - name: Run tests
       run: |
         cd backend
-        npm test
+        npm test:prod
