--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,11 @@ jobs:
         npm install
 
     - name: Build the backend
+      env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          JWT_KEY: ${{ secrets.JWT_KEY }}
+          PORT: ${{ secrets.PORT }}
       run: |
         cd backend
         npm run build:prod
