--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "test": "jest --watchAll",
-    "test:prod": "NODE_ENV=production && jest --watchAll"
+    "test:prod": "SET NODE_ENV=production && jest --watchAll"
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
