--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "start:prod": "NODE_ENV=production && ts-node ./src/index.ts",
+    "start:prod": "cross-env NODE_ENV=production && ts-node ./src/index.ts",
     "dev": "nodemon",
     "build": "tsc && ts-node ./src/index.ts",
-    "build:prod": "NODE_ENV=production && tsc",
+    "build:prod": "cross-env NODE_ENV=production && tsc",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "test": "jest --watchAll",
-    "test:prod": "SET NODE_ENV=production && jest --watchAll"
+    "test:prod": "cross-env NODE_ENV=production && jest --watchAll"
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
@@ -26,7 +26,6 @@
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -54,6 +53,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
