--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,3 +50,25 @@ jobs:
       run: |
         cd backend
         npm run test:prod
+        
+    - name: Build the Docker image
+      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} .
+
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v0
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+    - name: Configure Docker for Google Cloud
+      run: gcloud auth configure-docker
+
+    - name: Push the Docker image
+      run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }}
+
+    - name: Deploy to Cloud Run
+      run: |
+        gcloud run deploy express-app \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} \
+          --platform managed \
+          --region ${{ secrets.GCP_REGION }} \
+          --allow-unauthenticated        
