--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,7 +52,17 @@ jobs:
         npm run test:prod
         
     - name: Build the Docker image
-      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} .
+      env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          JWT_KEY: ${{ secrets.JWT_KEY }}
+          PORT: ${{ secrets.PORT }}        
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          GCP_REGION: ${{ secrets.GCP_REGION }}
+      run: |
+        cd backend
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} .
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v0
@@ -60,13 +70,42 @@ jobs:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
     - name: Configure Docker for Google Cloud
-      run: gcloud auth configure-docker
+      env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          JWT_KEY: ${{ secrets.JWT_KEY }}
+          PORT: ${{ secrets.PORT }}
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          GCP_REGION: ${{ secrets.GCP_REGION }}          
+      run: |
+        cd backend
+        gcloud auth configure-docker
 
     - name: Push the Docker image
-      run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }}
+      env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          JWT_KEY: ${{ secrets.JWT_KEY }}
+          PORT: ${{ secrets.PORT }}
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          GCP_REGION: ${{ secrets.GCP_REGION }}          
+      run: |
+        cd backend
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }}
 
     - name: Deploy to Cloud Run
+      env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          JWT_KEY: ${{ secrets.JWT_KEY }}
+          PORT: ${{ secrets.PORT }}
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}          
+          GCP_REGION: ${{ secrets.GCP_REGION }}          
       run: |
+        cd backend
         gcloud run deploy express-app \
           --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} \
           --platform managed \
