--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,9 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependencies
-      run: |
-        cd backend
-        npm install
+      run: npm install
 
     - name: Build the backend
       env:
@@ -37,9 +35,7 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           JWT_KEY: ${{ secrets.JWT_KEY }}
           PORT: ${{ secrets.PORT }}
-      run: |
-        cd backend
-        npm run build:prod
+      run: npm run build:prod
 
     - name: Run tests
       env:
@@ -47,8 +43,7 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           JWT_KEY: ${{ secrets.JWT_KEY }}
           PORT: ${{ secrets.PORT }}    
-      run: |
-        npm run test:prod
+      run: npm run test:prod
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1        
@@ -62,8 +57,7 @@ jobs:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
           GCP_REGION: ${{ secrets.GCP_REGION }}
-      run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} .
+      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} .
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v0
@@ -79,8 +73,7 @@ jobs:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
           GCP_REGION: ${{ secrets.GCP_REGION }}          
-      run: |
-        gcloud auth configure-docker
+      run: gcloud auth configure-docker
 
     - name: Push the Docker image
       env:
@@ -91,8 +84,7 @@ jobs:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
           GCP_REGION: ${{ secrets.GCP_REGION }}          
-      run: |
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }}
+      run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }}
 
     - name: Deploy to Cloud Run
       env:
@@ -103,8 +95,7 @@ jobs:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}          
           GCP_REGION: ${{ secrets.GCP_REGION }}          
-      run: |
-        gcloud run deploy express-app \
+      run: gcloud run deploy express-app \
           --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/express-app:${{ github.sha }} \
           --platform managed \
           --region ${{ secrets.GCP_REGION }} \
